website/addons/trello/static/trelloboard.css
/* @override http://localhost:5000/addons/static/trello/trelloboard.css */

div#KanbanBoard
{
    overflow-x: scroll;
    overflow-y: auto;
    white-space: nowrap;
	background-color: #fff;
	border: 1px solid #28729d;
	border-radius: 5px;
	/*max-height: 600px;*/
	background-color: #28729d;
	min-height: 200px;
}


div#TrelloList {
}

div.TrelloListBlock
{
	background-color: #dbdbdb;
	width: 240px;
	border-radius: 5px;
	display: inline-block;
	cursor: default;
	margin: 0 5px 20px;
}

span.TrelloListName {
	font: bold 18px arial, verdana, sans-serif;
	padding-left: 5px;
}

div.TrelloListBlock.over {
	background-color: #ccfefa;
}

div.CardList{
	min-height: 20px;
	min-width: 200px;
	display: table;
}



.TrelloCardLinkIcon
{
	float: right;
	display: none;
}

div.TrelloCoverImage img {
	max-width: 175px;
	height: auto;
	margin-bottom: 5px;
	display: block;
}


div.TrelloCard
{
	font: normal normal 12px arial, verdana, sans-serif;
	display: block;
	border-style: none;
	border-width: 1px;
	width: 220px;
	background-color: #fefefc;
	border-bottom-style: outset;
	border-bottom-color: #fcfcfc;
	border-radius: 5px;
	white-space: normal;
	padding-left: 5px;
	padding-top: 5px;
	padding-bottom: 5px;
	float: left;
	min-height: 40px;
	margin: 5px 5px 5px 9px;

}

div.CardList .TrelloCard {
	cursor: move;
}

div.add_trello_card_link {
	font: normal normal 12px arial, verdana, sans-serif;
	display: block;
	width: 220px;
	white-space: normal;
	padding-top: 15px;
	float: left;
	min-height: 40px;
	padding-left: 10px;
	color: #848484;
}

div.add_trello_card_group {
	display: none;
	/*display: block;*/
	width: 230px;
	white-space: normal;
	padding-top: 5px;
	float: left;
	min-height: 40px;
	padding-left: 10px;
	text-align: left;
	max-width: 230px;
}


textarea.add_trello_card_name {
	font: normal normal 12px arial, verdana, sans-serif;
	border-style: none;
	border-width: 1px;
	width: 100%;
	background-color: #fefefc;
	border-bottom-style: outset;
	border-bottom-color: #fcfcfc;
	border-radius: 5px;
	white-space: normal;
	padding-top: 5px;
	padding-bottom: 5px;
	resize: vertical;
}

span.add_trello_card_button {
	padding: 5px;
	margin: 5px;
	display: inline-block;
	background-color: #3db333;
	color: #feffff;
}

span.add_trello_card_cancel {
	display: inline-block;
	padding-top: 5px;
	color: #6e6e6e;
	font: bold 20px/10px "Helvetica Neue", Arial, Helvetica, Geneva, sans-serif;
	margin-left: 4px;
}

div.TrelloCardName {
	padding-right: 15px;
}

span.attachment_preview {
	width: 250px;
	height: 150px;
	display: inline-block;
	color: #000;
	background-color: #efefef;
	overflow: hidden;
	margin-right: 10px;
	margin-bottom: 10px;
	text-align: center;
	line-height: 125px;
	font-variant: small-caps;
	font-size: 18px;
}

span.attachment_description {
	display: inline-block;
}




div.trello_card_detail_comment {
	display: block;
	border: 1px solid #a7a7a7;
	width: 95%;
	border-radius: 5px;
	padding: 5px;
	margin-bottom: 10px;
	margin-top: 10px;
	overflow: hidden;
	text-align: left; 
}



div.trello_card_detail_comment_comment {
	font: 13px/1.5 Georgia, "Times New Roman", Times, serif;
	text-indent: 10px;
}

div.trello_card_detail_comment_count {
	margin-top: 15px;
	margin-bottom: -5px;
	text-align: right;
	font: bold 14px "Helvetica Neue", Arial, Helvetica, Geneva, sans-serif;
}

div.trello_card_detail_comment_owner {
	width: 50%;
	float: right;
	margin-bottom: 10px;
	text-align: right;
}

div.trello_card_detail_comment_date {
	width: 50%;
	float: left;
	margin-bottom: 10px;
}

div.trello_card_detail_comment_header {
	font-size: 10px;
	display: block;
	float: none;
}

.TrelloBoardName a
{
	color: #feffff;
	text-indent: 10px;
	font-size: 24px;
	vertical-align: top;
	padding-left: 5px;
}


div.trello_card_detail_name {
	font: bold 18px "Helvetica Neue", Arial, Helvetica, Geneva, sans-serif;
	margin-bottom: 5px;
	width: 70%;
	display: inline-block;
}

div.trello_card_detail_edit_name_original_group {
}

.trello_card_detail_edit_name_original_group img{
	display: inline-block;
	vertical-align: 1px;
}
.trello_card_detail_name img{
	float: right;
	margin-right: 20px;
}

div.trello_card_detail_attchment_header {
	font-weight: bold;
	font-size: 14px;
	text-align: left;
	margin-bottom: 5px;
}


div.trello_card_detail_desc {
	font: 12px "Helvetica Neue", Arial, Helvetica, Geneva, sans-serif;
	margin-bottom: 10px;
}


div.trello_card_detail_checklist_name {
	font-weight: bold;
	font-size: 14px;
	text-indent: 0;
}

div.trello_card_detail_checklist_checkitem {
	font-size: 12px;
	text-indent: 10px;
}



div.trello_card_detail_checklist_checkitem span.complete {
	text-decoration: line-through;
	color: #8e8e8e;
}

div.trello_card_detail_checklist {
	margin-bottom: 10px;
}

/*Add Checkitem*/

.trello_card_detail_add_checkitem_link {
	font-size: 11px;
	color: gray;
	padding-left: 10px;
	cursor: pointer;
}

.trello_card_detail_checklist_checkitem input{
	margin-right: 6px;
	cursor: pointer;
}

div.trello_card_detail_add_checkitem_group {
	display: none;
	/*display: block;*/
	width: 100%;
	white-space: normal;
	padding-top: 5px;
	min-height: 40px;
	padding-left: 10px;
	text-align: left;
	min-height: 100px;
}

.add_trello_card_detail_add_checkitem_name{
		font: normal normal 12px arial, verdana, sans-serif;
	border-style: none;
	border-width: 1px;
	width: 60%;
	background-color: #fefefc;
	border-style: outset;
	border-bottom-color: #fcfcfc;
	border-radius: 5px;
	white-space: normal;
	padding-top: 5px;
	padding-bottom: 5px;
	resize: vertical;
}

.trello_card_detail_add_checkitem_cancel {
		display: inline-block;
	padding-top: 5px;
	color: #6e6e6e;
	font: bold 20px/10px "Helvetica Neue", Arial, Helvetica, Geneva, sans-serif;
	margin-left: 4px;
}

.trello_card_detail_add_checkitem_button {
		padding: 5px;
	margin: 5px;
	display: inline-block;
	background-color: #3db333;
	color: #feffff;
}
/* ... */

